tests/compile_fail/hash/unknown_field_attribute.rs
#[derive(derive_more::Hash)]
struct Foo(#[hash(unknown)] i32);

fn main() {}